# OOP-labs

./: README.md
.devcontainer/: .devcontainer.code-workspace  Dockerfile  devcontainer.json
lab01/: CMakeLists.txt  main.cpp
lab01/include/: eliminate_unset_bits.h
lab01/src/: eliminate_unset_bits.cpp
lab01/test/: tests01.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/include/: seven.h
lab02/src/: seven.cpp
lab02/test/: test.cpp
lab03/: CMakeLists.txt  main.cpp
lab03/include/: figure.h  octagon.h  square.h  triangle.h
lab03/src/: figure.cpp  octagon.cpp  square.cpp  triangle.cpp
lab03/test/: tests.cpp
lab04/: CMakeLists.txt  main.cpp
lab04/include/: array.h  figure.h  octagon.h  point.h  square.h  triangle.h
lab04/test/: tests.cpp
